adds the new intro with a greater detail

--- a/references.bib
+++ b/references.bib
@@ -99,3 +99,17 @@ year={2011},
 ISSN={0740-7459},},
 
 
+@article{Robillard_a_field_study,
+year={2011},
+issn={1382-3256},
+journal={Empirical Software Engineering},
+volume={16},
+number={6},
+doi={10.1007/s10664-010-9150-8},
+title={A field study of {API} learning obstacles},
+publisher={Springer US},
+keywords={Application programming interfaces; Software libraries; Programming; Documentation},
+author={Robillard, MartinP. and DeLine, Robert},
+pages={703-732},
+language={English}
+}
