--- a/root.tex
+++ b/root.tex
@@ -98,14 +98,14 @@ Practioners can use the presented technique to automatically generate and mainta
 \begin{singlespace}
 I am grateful to Shahana, my wife, for supporting me and the family while I took the time away to work on this research.
 
-I am thankful to my supervisor Dr. Frank Maurer for giving me the opportunity and valuable guidance to pursue this research.
+I am thankful to my supervisor Dr. Frank Maurer for giving me the opportunity and valuable guidance to pursue this research. I am also thankful to Dr. Craig Anslow for his continuous encouragement and the countless number of hours that he spent to provide feedback about my work.
 
-I am also thankful to Dr. Craig Anslow for his continuous encouragement and the countless number of hours that he spent to provide feedback about my work.
+I am grateful to Cisco for allowing me to pursue this research alongside my job. I am grateful to the study participants in my case studies for sharing their time with me on the experiments.
 \newpage
 \phantomsection
 \altchapter{\bf{Dedication}}
 \begin{center}
-  To Shahana
+  To my dear wife.
 \end{center}
 \newpage
 \phantomsection
