revised tool paper intro

--- a/introduction.tex
+++ b/introduction.tex
@@ -33,7 +33,7 @@ This thesis is ogranized as follows. In Chapter~\ref{chapter:case_study}, I disc
 
 In Chapter~\ref{chapter:spy_rest}, I present the following list of REST API documentation requirements by studying the literature and applying the findings from Chapter~\ref{chapter:case_study}: 1) automated, 2) example based, 3) executable, 4) version aware, 5) customizable, 6) reusable, and 7) collaborative. I discuss the available REST API documentation techniques that require repeatitive manual efforts to generate and maintain custom formatted API descriptions that fail to satisfy these requirements. I present, SpyREST, a novel technique to intercept example REST API calls using an HTTP proxy server to collect and autmatically synthesize API traffic to generate and update API documentation to satisfy the aforementioned requirements. The primary advantage of the presented technique is that the documentation is generated from executable code. As a result, a continuously updated REST API documentation with realistic usage examples is achievable with a reduced manual effort
 
-In Chapter~\ref{chapter:demo_paper}, I present a prototype implementation of the aformentioned technique to demonstrate a reusable tool and compare it against the existing REST API documentation tools that rely on custom API description languages. I also present an example where automated test code can be used to generate and maintain REST API documentation using the developed tool.
+In Chapter~\ref{chapter:demo_paper}, I present a prototype implementation of the aformentioned technique to demonstrate a reusable tool and compare it against the existing REST API documentation tools that rely on custom API description languages. In this prototype implementation, I discuss the process that transforms a number of example HTTP requests and responses into a usable REST API documentation. I also present an example where automated test code is used to generate and maintain a continuously updated REST API documentation using the developed tool.
 
 I discuss an industrial evaluation of the proposed technique and the tool in Chapter~\ref{chapter:cisco_study}. The evaluation is carried out based on the data collected from an eighteen month of production use of SpyREST at Cisco, my current employer. From the study I found that it is feasible to use the proposed interception technique and automated tests to document evolving REST APIs satisfying the previously preseted REST API documentation requirements. Automated always-updated REST API documentation was found to help establish a quick feedback cycle among the stakeholders. I also discuss several refinements and limitations of the proposed technique based on the lessons learned from this case study.
 
