first reasonably ok pass

--- a/controlled_study/controlled_study.tex
+++ b/controlled_study/controlled_study.tex
@@ -115,7 +115,7 @@ The WordPress REST API V2 has been published and maintained since May 2015. Befo
   \item Average daily installations: $ \approx 500$.
 \end{itemize}
 
-Starting January 2017, the WordPress REST API V2 is no longer required to be installed as a separate plug-in since it is bundled with WordPress installation. According to the code repository, there are a total of 99 and 46 contributors that had at least one commit to the code repository of the API and its documentation, respectively. These properties satisfy R1 AND R2, our requirements for using a representative API. By selecting an open-source project we are able to access the source-code to inspect the implementation and documentation technique of the WordPress REST API. The API implements a self-documenting feature where API developers expose API endpoints over HTTP OPTIONS verb to explain the API elements. To implement this feature, the API developers describe the API elements in the code. For example:
+Starting January 2017, the WordPress REST API V2 is no longer required to be installed as a separate plug-in since it is bundled with WordPress installation. According to the code repository, there are a total of 99 and 46 contributors that had at least one commit to the code repository of the API and its documentation, respectively. These properties satisfy R1 and R2, our requirements for using a representative API. By selecting an open-source project we are able to access the source-code to inspect the implementation and documentation technique of the WordPress REST API. The API implements a self-documenting feature where API developers expose API endpoints over HTTP OPTIONS verb to explain the API elements. To implement this feature, the API developers describe the API elements in the code. For example:
 
 \lstset{basicstyle=\ttfamily\footnotesize,breaklines=true}
 \begin{lstlisting}[language=php,showspaces=false,showstringspaces=false,numbers=left,xleftmargin=2em,caption={Example of self-documenting API Code in PHP},label=wordpress_code]
