--- a/root.tex
+++ b/root.tex
@@ -76,7 +76,7 @@ Canada\\
 \signline
 Dr. Craig Anslow\\
 Supervisory Committee Member\\
-School of Eng. and Computer Science \\
+School of Eng. and Comp. Science \\
 Victoria University of Wellington\\
 New Zealand\\
 \end{signing}
