--- a/symbols.tex
+++ b/symbols.tex
@@ -6,7 +6,17 @@
 \begin{tabbing}
 Symbol~~~~~\= \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \  \parbox{5in}{Definition}\\
 
-\addsymbol \mbox{U of C}: {University of Calgary}
+\addsymbol \mbox{API}: {Application Programming Interface}
+\addsymbol \mbox{HTTP}: {Hyper Text Transfer Protocol}
+\addsymbol \mbox{JSON}: {JavaScript Object Notation}
+\addsymbol \mbox{REST}: {Representational State Transfer, used interchangeably with RESTful}
+\addsymbol \mbox{SOAP}: {Simple Object Protocol}
+\addsymbol \mbox{WSDL}: {Web Service Definition Language}
+\addsymbol \mbox{XML}: {Extensible Markup Language}
+
+
+
+
 
 % .
 % .
