adds the self refs

--- a/references.bib
+++ b/references.bib
@@ -113,3 +113,43 @@ author={Robillard, MartinP. and DeLine, Robert},
 pages={703-732},
 language={English}
 }
+@inproceedings{sohan2015case,
+  title={A Case Study of {Web API} Evolution},
+  author={Sohan, SM and Anslow, Craig and Maurer, Frank},
+  booktitle={Proc. of IEEE World Congress on Services (SERVICES)},
+  pages={245--252},
+  year={2015},
+  organization={IEEE}
+}
+@inproceedings{sohan2015spyrest,
+  title={SpyREST: Automated {RESTful} {API} Documentation using an {HTTP} Proxy Server},
+  author={Sohan, SM and Anslow, Craig and Maurer, Frank},
+  booktitle={Proc. of IEEE/ACM International Conference on Automated Software Engineering},
+  year={2015},
+  pages={271-276}
+}
+
+@inproceedings{sohan2015spyrest_tool,
+  title={SpyREST in Action: An Automated {RESTful} {API} Documentation Tool},
+  author={Sohan, SM and Anslow, Craig and Maurer, Frank},
+  booktitle={Proc. of IEEE/ACM International Conference on Automated Software Engineering},
+  year={2015},
+  pages={813-818}
+}
+
+@INPROCEEDINGS{sohan_cisco,
+author={S. M. Sohan and C. Anslow and F. Maurer},
+booktitle={Proc. of IEEE/ACM International Conference on Software Engineering},
+title={Automated Example Oriented {REST} {API} Documentation at Cisco},
+year={2017},
+pages={213-222},
+keywords={Documentation;Industries;Manuals;Production;Tools;Usability;API;Automation;Case study;Documentation;HTTP;REST;Test;Tool;Web API},
+}
+
+@INPROCEEDINGS{sohan_vlhcc,
+author={S. M. Sohan, Frank Maurer, Craig Anslow and Martin Robillard },
+booktitle={to appear in Proc. of IEEE Symposium on Visual Languages and Human-Centric Computing },
+title={A Study of the Effectiveness of Usage Examples in {REST} {API} Documentation},
+year={2017},
+pubstate={forthcoming}
+}
