--- a/root.tex
+++ b/root.tex
@@ -84,7 +84,7 @@ New Zealand\\
 \newpage
 \phantomsection
 \altchapter{\bf{Abstract}}
-API documentation presents both a problem and an opportunity for API usability. Most developers learn to use an API based on its documentation and at the same time face obstacles using the APIs due to lack of necessary information in the documentation \cite{Robillard_what_makes}. REST APIs provide interconnectivity between applications over HTTP. Documentation of a REST API is a key information source for software developers that use these types of API. As a REST API evolves, the documentation needs to be maintained alongside. This implies that REST API developers also need to efficiently generate and maintain the documentation of their APIs with the qualities that make the API usable. This introduces the problem of interest in this research: how to document REST APIs?
+API documentation presents both a problem and an opportunity for API usability. Most developers learn to use an API based on its documentation and at the same time face obstacles using the APIs due to lack of necessary information in the documentation. REST APIs provide interconnectivity between applications over HTTP. Documentation of a REST API is a key information source for software developers that use these types of API. As a REST API evolves, the documentation needs to be maintained alongside. This implies that REST API developers also need to efficiently generate and maintain the documentation of their APIs with the qualities that make the API usable. This introduces the problem of interest in this research: how to document REST APIs?
 
 This is a problem because there is a lack of scientifically established guidelines and automated tool support for REST API documentation with usage examples. Existing local API documentation techniques and tools are not readily usable for the documentation of REST APIs because REST APIs have HTTP protocol specific parameters, and API clients are agonistic to the programming languages used to implement the APIs. Existing REST API documentation techniques rely on custom API definition languages that require manual effort to generate and maintain REST API documentation as a separate artifact as the API evolves.
 
