--- a/symbols.tex
+++ b/symbols.tex
@@ -10,7 +10,7 @@ Symbol~~~~~\= \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 
 \addsymbol \mbox{HTTP}: {Hyper Text Transfer Protocol}
 \addsymbol \mbox{JSON}: {JavaScript Object Notation}
 \addsymbol \mbox{REST}: {Representational State Transfer, used interchangeably with RESTful}
-\addsymbol \mbox{SOAP}: {Simple Object Protocol}
+\addsymbol \mbox{SOAP}: {Simple Object Access Protocol}
 \addsymbol \mbox{WSDL}: {Web Service Definition Language}
 \addsymbol \mbox{XML}: {Extensible Markup Language}
 
