--- a/appendix.tex
+++ b/appendix.tex
@@ -488,3 +488,21 @@
 \end{lstlisting}
 
 
+\chapter{Permissions for Reusing Published Papers in PhD Thesis}
+
+\begin{figure}
+ \centering
+ \includegraphics[width=\textwidth]{copyrights/services.pdf}
+\end{figure}
+\begin{figure}
+ \centering
+ \includegraphics[width=\textwidth]{copyrights/spy_rest.pdf}
+\end{figure}
+\begin{figure}
+ \centering
+ \includegraphics[width=\textwidth]{copyrights/tool.pdf}
+\end{figure}
+\begin{figure}
+ \centering
+ \includegraphics[width=\textwidth]{copyrights/cisco_paper.pdf}
+\end{figure}
